# Dukat

./: .gitignore  Cargo.toml  README.md  package.json
lib/: index.js
native/: Cargo.toml
native/src/: lib.rs
native/src/implementation/: dukat.rs  mod.rs  transaction.rs
native/src/utils/: hashable.rs
src/: lib.rs  main.rs
src/implementation/: dukat.rs  dukatchain.rs  transaction.rs
src/models/: dukat.rs  dukatchain.rs  transaction.rs
src/utils/: hashable.rs  mod.rs
