[package]
name = "dukat"
version = "0.1.0"
authors = ["dragan1810 <d.novakovic1810@yahoo.com>"]
license = "MIT"
edition = "2018"
description = "Blockchain prototype"
repository = "https://github.com/dragan-novakovic/Dukat.git"

[lib]
crate-type = ["cdylib"]


[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
hex = "0.4.2"
wasm-bindgen = "0.2.71"
js-sys = "0.3"
web-sys = "0.3"
chrono = {version = "0.4", features = ["wasmbind", "serde"]}
